# power_flow_solver

./: .gitignore  CHANGELOG.md  FIX_SUMMARY.md  LICENSE  README.md  SOLVER_INPUT_FORMAT.md  analyze_transformers.exs  calculate_initial_mismatch.exs  check_bases.exs  checksum-Elixir.PowerFlowSolver.Native.exs  compare_results.exs  compare_ybus.exs  compare_ybus_detailed.exs  comparison_bus1_pq.exs  investigate_parser_tap.exs  mix.exs  powerworld_vs_solver.md  test_extreme_tolerance.exs  test_old_ybus.exs  test_tol_1e4.exs  verify_angle_bug.exs  verify_powerworld_tap.exs  ybus_discrepancy_summary.md  ybus_tap_options.md
.claude/: settings.local.json
.github/workflows/: release.yml
config/: config.exs
docs/: frt-contingency-scr-implementation.md
examples/: simple_2bus.exs
lib/: power_flow_solver.ex
lib/power_flow_solver/: matpower_parser.ex  native.ex  newton_raphson.ex  scr.ex  sparse_linear_algebra.ex
native/power_flow_solver/: .gitignore  Cargo.toml
native/power_flow_solver/src/: contingency_scr.rs  lib.rs  power_flow.rs  scr.rs
scripts/: build_release.sh
test/: power_flow_solver_test.exs
test/power_flow_solver/: 000_6bus_test.exs  ieee118_test.exs  raw_file_test.exs  scr_contingency_test.exs  scr_test.exs  shunt_test.exs  simple_6bus_test.exs
test/test_data/: 000_6bus_v33.RAW  0_6bus_start_simple_v33.raw
